cabal-version:       2.4
name:                huskel
version:             0.1.0.0
extra-source-files:  CHANGELOG.md

executable huskel-program
  main-is:             main.hs
  build-depends:
    base ^>=4.14.0.0
    , huskel
  default-language:    Haskell2010

library
  exposed-modules:
    Compiler
    , JStrings
  hs-source-dirs:      src
  build-depends:
    base ^>=4.14.0.0
    , HUnit ^>=1.6.0.0
    , test-framework
    , test-framework-hunit
  default-language:    Haskell2010

Test-Suite test-huskel
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             main.hs
  other-modules:
    John.TestInterop
    , MainSuite
    , Tests.Main
    , Tests.JStrings
  build-depends:
    base ^>=4.14.0.0
    , HUnit ^>=1.6.0.0
    , test-framework
    , test-framework-hunit
    , huskel
  default-language:    Haskell2010